<resources>
    <string name="app_name">Project 2_E-commerce App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account</string>
    <string name="previous_page">Previous Page</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="admin_only">Admin Only</string>
    <string name="delete_an_item">Delete An Item</string>
    <string name="view_all_users">View All Users</string>
    <string name="modify_an_item">Modify an Item</string>
    <string name="enter_the_id_number_of_the_listing_you_want_to_delete">Enter the ID number of the listing you want to delete</string>
    <string name="id_number">ID Number</string>
    <string name="delete">Delete</string>
    <string name="enter_the_id_number_of_the_listing_you_want_to_modify">Enter the ID number of the listing you want to modify</string>
    <string name="modify">Modify</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="enter_user_id_number">Enter User ID Number</string>
    <string name="enter_id_number_of_user_that_you_wish_to_delete">Enter ID Number of user that you wish to delete</string>
    <string name="search">Search</string>
    <string name="name_of_funko_pop">Name of Funko Pop</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="enter_the_id_number_of_an_item_you_wish_to_delete_or_checkout_from_your_cart">Enter the ID number of an item you wish to delete or checkout from your cart</string>
    <string name="check_out">Check Out</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_user">Create User</string>
    <string name="cart">Cart</string>
    <string name="buy">Buy</string>
    <string name="admin">Admin</string>
    <string name="sell">Sell</string>
    <string name="orders">Orders</string>
    <string name="browse">Browse</string>
    <string name="funko_imports">Funko Imports</string>
    <string name="the_place_to_buy_and_sell_funko_pops">The place to buy and sell Funko Pops</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="enter_the_id_number_of_order_you_wish_to_return">Enter the ID number of order you wish to return</string>
    <string name="put_item_for_sell">Put Item For Sell</string>
    <string name="name_of_item">Name of Item</string>
    <string name="price_of_item">Price of Item</string>
    <string name="condition_of_item">Condition of Item</string>
    <string name="genre_of_item">Genre of Item</string>
    <string name="large_text">Fix issue</string>
</resources>